========

* 2.3.1 (???, ? ? ?)

  * Don't wait to long listing the changes...

  * Enhancements (?? ENH, OPT, and NF commits)

    - :class:`~mvpa2.mappers.fx.FxMapper` now will provide consistent order
      of groups of items.  It also got a new argument `order` with available
      value of 'occurrence' to that groups would get ordered by their occurance
      in the original dataset.

* 2.3.0 (Thu, 5 March 2014)

  * **Warning**: Due to a significant number of new features and some internal
    changes, loading of HDF5 files saved with previous versions might be
    impaired.

  * New functionality (>73 commits)

    - Multi-threaded, surface-based searchlight queryengine
      :func:`~mvpa2.misc.surfing.queryengine.disc_surface_queryengine`
      supporting as output space either surfaces
      (:class:`~mvpa2.misc.surfing.queryengine.SurfaceVerticesQueryEngine`;
      recommended) or volumes
      (:class:`~mvpa2.misc.surfing.queryengine.SurfaceVoxelsQueryEngine`).
    - :class:`~mvpa2.misc.plot.flat_surf.FlatSurfacePlotter` supporting
      flattened cortical surfaces.
    - I/O support for AFNI NIML (dset,
      :mod:`~mvpa2.support.nibabel.afni_niml_dset`; annotation,
      :mod:`~mvpa2.support.nibabel.afni_niml_annot`), AFNI 1D datasets
      (:mod:`~mvpa2.support.nibabel.afni_suma_1d`), SUMA surface specification
      (:mod:`~mvpa2.support.nibabel.afni_suma_spec`), Freesurfer ASCII surfaces
      (:mod:`~mvpa2.support.nibabel.surf_fs_asc`), GIFTI surfaces
      (:mod:`~mvpa2.support.nibabel.surf_gifti` through nibabel).
      Input support for Caret
      binary surfaces (:mod:`~mvpa2.support.nibabel.surf_caret`), EEGlab ASCII
      (:meth:`mvpa2.datasets.eeglab.eeglab_dataset`), AFNI NIML ( ROI,
      :mod:`~mvpa2.support.nibabel.afni_niml_roi`).
    - Experimental support for saving AttrDataset files directly to NIML format
      using :mod:`~mvpa2.datasets.niml`.
    - Freesurfer/AFNI/SUMA preprocessing wrapper script